# cspmf

./: .gitignore  CSPM-Frontend.cabal  CSPM-Parser.cabal  CSPM-ToProlog.cabal  CSPM-cspm-frontend.cabal  License  README.md  cabal-dev.config
CSPM-Frontend/: CSPM-Frontend.cabal
CSPM-Frontend/src/Language/CSPM/: AST.hs  AlexWrapper.hs  AstUtils.hs  BuiltIn.hs  Frontend.hs  LexHelper.hs  Lexer.x  Parser.hs  PrettyPrinter.hs  Rename.hs  ReorderBindings.hs  TokenClasses.hs  Utils.hs
CSPM-Frontend/test/: runCspParser.hs
CSPM-Frontend/test/ast/: Andrew.csp.ast  Lambda.csp.ast  SequentialRouter.csp.ast  SimpleGetSet.csp.ast  abp.csp.ast  bankv2.csp.ast  bankv3.csp.ast  bankv4.csp.ast  buses.csp.ast  dphil.fdr2.ast  ex.csp.ast  mbuff.csp.ast  nestedOps.csp.ast  newmbuff.fix.csp.ast  oopsla.csp.ast  peterson1.fdr2.ast  peterson2.fdr2.ast  protocol.fix.csp.ast  scheduler.fdr2.ast  simple.csp.ast  spec1.fdr2.ast  subtype_ex.csp.ast  subtype_nametype_ex.csp.ast
CSPM-Frontend/test/ast_rename/: Andrew.csp.ast2  Lambda.csp.ast2  SimpleGetSet.csp.ast2  bankv1.csp.ast2  bankv2.csp.ast2  bankv3.csp.ast2  bankv4.csp.ast2  dotpattern.csp.ast2  dphil.fdr2.ast2  dphil_butler.fdr2.ast2  ex.csp.ast2  hanoi.fix.csp.ast2  independent.csp.ast2  livecrossing.fdr2.ast2  peterson.csp.ast2  phils.fix.csp.ast2  protocol.fix.csp.ast2  student1.csp.ast2  subtype_ex.csp.ast2  tickets.csp.ast2  vm1.csp.ast2
CSPM-ToProlog/: CSPM-ToProlog.cabal
CSPM-ToProlog/src/Language/CSPM/: AstToProlog.hs  CompileAstToProlog.hs  TranslateToProlog.hs
CSPM-ToProlog/src/Language/Prolog/PrettyPrint/: Direct.hs
CSPM-cspm-frontend/: CSPM-cspm-frontend.cabal  LICENSE  cabal_sandbox_install.sh  install_cspmf_for_prob.sh
CSPM-cspm-frontend/src/Language/CSPM/: AstToXML.hs
CSPM-cspm-frontend/src/Main/: Args.hs  ExceptionHandler.hs  ExecCommand.hs
src/: Main.hs
src/Language/CSPM/: AST.hs  AlexWrapper.hs  AstToProlog.hs  AstUtils.hs  BuiltIn.hs  CompileAstToProlog.hs  CoreAST.hs  Frontend.hs  LexHelper.hs  Lexer.hs  Lexer.x  Parser.hs  PatternCompiler.hs  PrettyPrinter.hs  PrettyPrinterNew.hs  Rename.hs  ReorderBindings.hs  SrcLoc.hs  TestScript.hs  Token.hs  TokenClasses.hs  TranslateToProlog.hs  UnicodeSymbols.hs  Utils.hs  Version.hs
src/Language/Prolog/PrettyPrint/: Direct.hs
src/Main/: Args.hs  ExecCommand.hs
src/Text/ParserCombinators/Parsec/: ExprM.hs
test/: runCspParser.hs  showAST.hs
test/ast/: Andrew.csp.ast  Lambda.csp.ast  SequentialRouter.csp.ast  SimpleGetSet.csp.ast  abp.csp.ast  altbitprotocol.csp.ast  bankv1.csp.ast  bankv2.csp.ast  bankv3.csp.ast  bankv4.csp.ast  buses.csp.ast  crossing.csp.ast  crossing.fdr2.ast  dotpattern.csp.ast  dphil.fdr2.ast  dphil_butler.fdr2.ast  emptySet.csp.ast  ex.csp.ast  frogs2.csp.ast  hanoi.fix.csp.ast  independent.csp.ast  livecrossing.fdr2.ast  mbuff.csp.ast  mutex1.fix.fdr2.ast  newmbuff.fix.csp.ast  oopseq.csp.ast  oopsla.csp.ast  peterson.csp.ast  peterson1.fdr2.ast  peterson2.fdr2.ast  peterson2.fix.fdr2.ast  phils.fix.csp.ast  prize.csp.ast  protocol.fix.csp.ast  scheduler.fdr2.ast  simple.csp.ast  spec1.fdr2.ast  spec2.fdr2.ast  student1.csp.ast  subtype_ex.csp.ast  (+5 more)
test/ast_clean/: Andrew.csp.clean.ast  Lambda.csp.clean.ast  SequentialRouter.csp.clean.ast  SimpleGetSet.csp.clean.ast  SimpleInterruptTimeout.csp.clean.ast  abp.csp.clean.ast  altbitprotocol.csp.clean.ast  bankv1.csp.clean.ast  bankv2.csp.clean.ast  bankv3.csp.clean.ast  bankv4.csp.clean.ast  buses.csp.clean.ast  crossing.csp.clean.ast  crossing.fdr2.clean.ast  dotpattern.csp.clean.ast  dphil.fdr2.clean.ast  dphil_butler.fdr2.clean.ast  emptySet.csp.clean.ast  ex.csp.clean.ast  frogs2.csp.clean.ast  hanoi.fix.csp.clean.ast  independent.csp.clean.ast  livecrossing.fdr2.clean.ast  mbuff.csp.clean.ast  mutex1.fix.fdr2.clean.ast  nestedOps.csp.clean.ast  oopseq.csp.clean.ast  peterson1.fdr2.clean.ast  peterson2.fdr2.clean.ast  peterson2.fix.fdr2.clean.ast  phils.fix.csp.clean.ast  prize.csp.clean.ast  protocol.fix.csp.clean.ast  scheduler.fdr2.clean.ast  simple.csp.clean.ast  spec1.fdr2.clean.ast  spec2.fdr2.clean.ast  student1.csp.clean.ast  subtype_ex.csp.clean.ast  subtype_nametype_ex.csp.clean.ast  (+4 more)
test/ast_rename/: Andrew.csp.ast2  Lambda.csp.ast2  Rename1.csp.ast2  SequentialRouter.csp.ast2  SimpleGetSet.csp.ast2  abp.csp.ast2  altbitprotocol.csp.ast2  bankv1.csp.ast2  bankv2.csp.ast2  bankv3.csp.ast2  bankv4.csp.ast2  buses.csp.ast2  crossing.csp.ast2  crossing.fdr2.ast2  dotpattern.csp.ast2  dphil.fdr2.ast2  dphil_butler.fdr2.ast2  emptySet.csp.ast2  hanoi.fix.csp.ast2  independent.csp.ast2  livecrossing.fdr2.ast2  mbuff.csp.ast2  mutex1.fix.fdr2.ast2  nestedOps.csp.ast2  oopseq.csp.ast2  peterson.csp.ast2  peterson1.fdr2.ast2  peterson2.fdr2.ast2  peterson2.fix.fdr2.ast2  phils.fix.csp.ast2  prize.csp.ast2  protocol.fix.csp.ast2  scheduler.fdr2.ast2  simple.csp.ast2  spec1.fdr2.ast2  spec2.fdr2.ast2  student1.csp.ast2  subtype_nametype_ex.csp.ast2  t1.csp.ast2  tickets.csp.ast2  (+2 more)
test/cspm/: bankv1.csp  buses.csp  unary_minus.csp
