Name:                CSPM-Frontend
Version:             0.22

Description:         Lexer,AST, Parser and Renaming for CSPM
License:             OtherLicense
category:            Language
License-File:        License
Author:              2006-2008 Marc Fontaine
Maintainer:          Marc Fontaine <fontaine@cs.uni-duesseldorf.de>
cabal-Version:       >= 1.2
build-type: Simple
Extra-source-files:

flag testing {
  description : Testing mode
  default:     False
}


library
  if flag(testing) {
    buildable: False
  }

  Build-Depends:       base,containers,array,parsec >=2.1.0.0 && < 3.0 ,parsecExprM, pretty,mtl,haskell-src,haskell98

  GHC-Options: -funbox-strict-fields -O2 -fasm -optl-Wl,-s -Wall
  Extensions: DeriveDataTypeable, GeneralizedNewtypeDeriving
  Hs-Source-Dirs:       src
  Exposed-modules:
    Language.CSPM.Frontend
    Language.CSPM.AST
    Language.CSPM.Parser
    Language.CSPM.Rename
    Language.CSPM.Token
  Other-modules:
    Language.CSPM.Lexer
    Language.CSPM.AlexWrapper
    Language.CSPM.LexHelper

