Name:                CSPM-Frontend
Version:             0.2.3

Description:
  This Package contains functions for lexing, parsing and renaming
  specifications of concurrent systems in CSPM-syntax.
  CSPM is the machine-readable syntax of concurrent sequential processes.
License:             OtherLicense
category:            Language
License-File:        License
Author:              2006-2008 Marc Fontaine
Maintainer:          Marc Fontaine <fontaine@cs.uni-duesseldorf.de>
cabal-Version:       >= 1.2
build-type: Simple
Extra-source-files:

flag testing {
  description : Testing mode
  default:     False
}


library
  if flag(testing) {
    buildable: False
  }

  Build-Depends:       base,containers,array,parsec >=2.1.0.0 && < 3.0 ,old-time,template-haskell, pretty,mtl,haskell-src,haskell98

  GHC-Options: -funbox-strict-fields -O2 -fasm -optl-Wl,-s -Wall
  Extensions: DeriveDataTypeable, GeneralizedNewtypeDeriving
  Hs-Source-Dirs:       src
  Exposed-modules:
    Language.CSPM.Frontend
    Language.CSPM.AST
    Language.CSPM.Parser
    Language.CSPM.Rename
    Language.CSPM.Token
    Language.CSPM.SrcLoc
  Other-modules:
    Language.CSPM.Version
    Language.CSPM.Lexer
    Language.CSPM.AlexWrapper
    Language.CSPM.LexHelper
    Text.ParserCombinators.Parsec.ExprM
