Name:                CSPM-Frontend
Version:             0.2.7.8

Description:
  This Package contains functions for lexing, parsing and renaming
  specifications of concurrent systems in CSPM-syntax.
  CSPM is the machine-readable syntax of concurrent sequential processes.
License:             OtherLicense
category:            Language
License-File:        License
Author:              2006-2008 Marc Fontaine
Maintainer:          Marc Fontaine <fontaine@cs.uni-duesseldorf.de>
cabal-Version:       >= 1.6
build-type: Simple
Extra-source-files:

flag testing {
  description : Testing mode
  default:     False
}


library
  if flag(testing) {
    buildable: False
  }

  Build-Depends:       base >= 4.0 ,containers,array,parsec >=2.1.0.0 && < 3.0 ,old-time,template-haskell, pretty,mtl,haskell98,syb

  GHC-Options: -funbox-strict-fields -O2 -fasm -optl-Wl,-s -Wall
  Extensions: DeriveDataTypeable, GeneralizedNewtypeDeriving
  Hs-Source-Dirs:       src,dist/build/autogen
  Exposed-modules:
    Language.CSPM.Frontend
    Language.CSPM.Utils
    Language.CSPM.AST
    Language.CSPM.Parser
    Language.CSPM.Rename
    Language.CSPM.Token
    Language.CSPM.SrcLoc
    Language.CSPM.AstUtils
    Language.CSPM.TokenClasses
    Language.CSPM.PrettyPrinter
    Language.CSPM.PatternCompiler
  Other-modules:
    Paths_CSPM_Frontend
    Language.CSPM.Version
    Language.CSPM.Lexer
    Language.CSPM.AlexWrapper
    Language.CSPM.LexHelper
    Text.ParserCombinators.Parsec.ExprM