Name:                CSPM-Frontend
Version:             0.11.1.1

Synopsis:            A CSP-M parser compatible with FDR-2.91

Description:
  CSP-M is the machine readable syntax of CSP (concurrent sequential processes) as used by
  the formal methods tools FDR, Probe and ProB.
  This Package contains functions for lexing, parsing, renaming and pretty-printing
  CSP-M specifications.
  The parser is (almost) 100% compatible with the FDR-2.91 parser.

License:             BSD3
category:            Language,Formal Methods,Concurrency
License-File:        LICENSE
Author:              Marc Fontaine, Ivaylo Dobrikov <ivaylo.dobrikov@googlemail.com> 2007 - 2018
Maintainer:          Marc Fontaine <Marc.Fontaine@gmx.de>, Ivaylo Dobrikov <ivaylo.dobrikov@googlemail.com>
Stability:           maintained
Tested-With:         GHC == 8.2.2, GHC == 7.10.3

cabal-Version:       >= 1.14
build-type: Simple

library
  Build-Depends:
    base >=4.0 && < 5.0
    ,containers >= 0.4 && < 0.6
    ,array >= 0.4 && < 0.6
    ,parsec2 >= 1.0.0 && < 1.1.0
    ,prettyclass >= 1.0 && < 1.1
    ,mtl >= 2.1 && < 2.3
    ,either >= 4.4
    ,transformers-either >= 0.1
    ,transformers >= 0.3 && < 0.6
    ,dlist >= 0.5 && < 0.7
    ,syb >= 0.3 && < 0.8
    ,ghc-prim >=0.2 && < 0.6
    ,filepath >=1.3
  Default-Language: Haskell2010
  Other-Extensions:
     DeriveDataTypeable
--     ,DeriveGeneric
  GHC-Options: -funbox-strict-fields -O2 -Wall
  Hs-Source-Dirs:       src
  Exposed-modules:
    Language.CSPM.Frontend
    Language.CSPM.Parser
    Language.CSPM.AST
    Language.CSPM.PrettyPrinter
    Language.CSPM.SrcLoc
    Language.CSPM.Rename
    Language.CSPM.Utils
    Language.CSPM.Token
    Language.CSPM.AstUtils
    Language.CSPM.TokenClasses
    Language.CSPM.LexHelper
    Language.CSPM.UnicodeSymbols
    Language.CSPM.BuiltIn
    Text.ParserCombinators.Parsec.ExprM
  Other-modules:
    Language.CSPM.Lexer
    Language.CSPM.AlexWrapper
    Paths_CSPM_Frontend