Name:                CSPM-ToProlog
Version:             0.6.1.1
Synopsis:            some modules specific for the ProB tool
Description:
  This package contains a translation from a CSPM AST to the representation
  used by the ProB tool.
  This code is only interesting for ProB developers.

License:             BSD3
category:            Formal Methods
License-File:        LICENSE
Author:              2006-2015 Marc Fontaine
Maintainer:          Marc Fontaine <fontaine@cs.uni-duesseldorf.de>, Ivaylo Dobrikov <ivaylo.dobrikov@googlemail.com>
Cabal-Version:  >= 1.14
Tested-With:    GHC==7.8.3
Build-Type:     Simple

Library
  Default-Language: Haskell2010
  Build-Depends:
    CSPM-Frontend >= 0.10.1 && < 0.11
    ,pretty >= 1.1 && < 1.2
    ,base >= 4.0 && <5.0
    ,containers >= 0.4 && <0.6
    ,array >=0.4 && <0.6
    ,ghc-prim >= 0.2 && <0.4

  Hs-Source-Dirs: src
  ghc-options: -Wall

  Exposed-modules:
    Language.CSPM.AstToProlog
    Language.CSPM.CompileAstToProlog
    Language.CSPM.TranslateToProlog
  Other-modules:
    Paths_CSPM_ToProlog
    Language.Prolog.PrettyPrint.Direct